# llvm-ep

./: .gitignore  CMakeLists.txt  README.md  comp.sh  execute.sh  namolaru_features.txt  namolaru_features_sorted.txt  output.stats
CountEdges/: CMakeLists.txt
CountVars/: CMakeLists.txt  countVars.cpp
EdgeCounter/: CMakeLists.txt  EdgeCounter.cpp
RangeAnalysis/: CMakeLists.txt  README.txt  execute.sh
RangeAnalysis/lib/RangeAnalysis/: ClientRA.cpp
RangeAnalysis/tests/1/: 01.cpp  01.ll
RangeAnalysis/tests/2/: 02.cpp  02.ll
RangeAnalysis/tests/3/: 03.cpp
RangeAnalysis/tests/4/: 04.cpp  04.ll
RangeAnalysis/tests/5/: 05.ll
VarCounter/: CMakeLists.txt  VarCounter.cpp
cfg2dot/: CMakeLists.txt  cfg2dot.cpp
